# excel2json

./: CMakeLists.txt  README.md  check_json.py  create_global_conf.py  global_conf.json  global_conf.xlsx  load_global_conf.cpp  read_from_file.cpp
